# isciacus-monitoring

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN_ANALYTICS_V3.md  README.md  REFACTORING_CACHE.md  SPEC_ADS_STRATEGY_CORRECTED.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.claude/: CLAUDE.md  hook-data.json
.claude/hooks/: pre-edit  stop
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  deploy-cloudrun.yml  deploy-dev.yml  e2e-tests.yml
backend/: .env.example  Dockerfile  init_test_db.py  monitoring_app.py  pyproject.toml  requirements.txt  test_cart_recovery_manual.py
backend/config/: __init__.py  benchmarks.json  industries.json  messages.py
backend/data/: audit_cache.json  theme_analysis_cache.json
backend/data/cache/: filters.json
backend/jobs/: __init__.py  audit_workflow.py  inngest_setup.py  pocketbase_progress.py
backend/jobs/workflows/: __init__.py  ads_readiness_audit.py  bot_access_audit.py  capi_audit.py  cart_recovery_audit.py  customer_data_audit.py  ga4_audit.py  gmc_audit.py  gsc_audit.py  meta_audit.py  onboarding.py  theme_audit.py
backend/middleware/: __init__.py  auth_middleware.py
backend/migrations/: pb_schema.json
backend/models/: __init__.py  analytics.py  benchmarks.py  user.py
backend/routes/: admin.py  auth.py  credentials.py
backend/scripts/: check_env_usage.py  init_pocketbase.py
backend/services/: __init__.py  audit_orchestrator.py  audit_service.py  auth_service.py  benchmarks.py  cache_service.py  cart_recovery_analyzer.py  config_service.py  customer_data_analyzer.py  ga4_analytics.py  meta_capi.py  paths.py  permissions_checker.py  pocketbase_service.py  rate_limiter.py  secure_store.py  shopify_analytics.py  theme_analyzer.py
backend/tests/: run_e2e_tests.py  test_cart_recovery_analyzer.py  test_customer_data_analyzer.py  test_inngest_workflows_e2e.py
docker/pocketbase/: entrypoint.sh
e2e/: README.md  audit-page.spec.ts  audit-visual-validation.spec.ts
frontend/: .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/components/: FilterBar.tsx  Header.tsx  ProductGrid.tsx  ProductTable.tsx  Sidebar.tsx  index.ts
frontend/src/components/analytics/: BenchmarkIndicator.tsx  BudgetRecommendations.tsx  CrossPlatformTracking.tsx  CustomerStats.tsx  FunnelChart.tsx  LTVAnalysis.tsx  RFMSegmentation.tsx  SalesAnalysis.tsx  index.ts
frontend/src/components/analytics/funnel/: CollectionAccordion.tsx  EntryPointTable.tsx  FunnelBar.tsx  FunnelHeader.tsx  FunnelMetrics.tsx  index.ts
frontend/src/components/analytics/sales/: FilterDropdown.tsx
frontend/src/components/analytics/sales-analysis/: FilterTypeSelector.tsx  LoadingSkeleton.tsx  ProductRow.tsx  SalesResults.tsx  SalesResultsSummary.tsx  SalesResultsTable.tsx
frontend/src/components/audit/: AuditCampaignSummary.tsx  AuditCard.tsx  AuditCards.tsx  AuditIcons.tsx  AuditPageHeader.tsx  AuditPipeline.tsx  AuditProgressIndicator.tsx  AuditResultSection.tsx  AuditResults.tsx  AuditWelcome.tsx  CoverageComponents.tsx  GMCFlowComponents.tsx  GMCFlowConstants.ts  GMCFlowIcons.tsx  GMCFlowKPI.tsx  IssueCard.tsx  OnboardingCard.tsx  PipelineStep.tsx  StatusIcons.tsx  StepIcon.tsx  Tooltip.tsx  auditConfig.ts  auditPolling.ts  auditResultBuilders.ts  auditSteps.ts  auditTooltips.ts  campaignScoreUtils.ts  dateUtils.ts  index.ts  pocketBaseRunnerSync.ts  sequentialRunnerTypes.ts  sequentialRunnerUtils.ts  stepperConfig.ts  useAudit.ts  useAuditHelpers.ts  useAuditPolling.ts  useAuditSession.ts  usePocketBaseSync.ts  useSequentialAuditRunner.ts  utils.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/filters/: FilterComponents.tsx  index.ts
frontend/src/components/settings/: GoogleServiceAccountUpload.tsx  GoogleUploadComponents.tsx  HealthIndicator.tsx  PermissionsPanel.tsx  SectionIcons.tsx  SettingsComponents.tsx  SettingsHelpers.tsx  VariableCard.tsx  VariableCardParts.tsx  index.ts  sectionIconsData.ts  settingsUtils.ts  useConnectionTest.ts  useGoogleCredentials.ts
frontend/src/components/settings/wizard/: ConfigurationWizard.tsx  WizardComponents.tsx  WizardHelpers.ts  WizardIcons.tsx  iconHelpers.tsx  index.ts  types.ts  useWizardChecks.ts
frontend/src/constants/: index.ts
frontend/src/contexts/: AuthContext.tsx  AuthProvider.tsx  authUtils.ts  useAuthState.ts
frontend/src/hooks/: useAnalytics.ts  useAuth.ts  usePocketBaseAudit.ts  useProducts.ts  useRealtimeCollection.ts
frontend/src/lib/: queryClient.ts
frontend/src/pages/: AnalyticsDataPage.tsx  AuditPage.tsx  BenchmarksPage.tsx  LoginPage.tsx  SettingsPage.tsx  index.ts
frontend/src/services/: api.ts  apiClient.ts  apiTypes.ts  auditApi.ts  configApi.ts  pocketbase.ts
frontend/src/stores/: useAppStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: analytics.ts  product.ts
terraform/: .gitignore  example.tfvars  main.tf  outputs.tf  variables.tf
