# =====================================================
# ISCIACUS Monitoring Backend - Python Configuration
# =====================================================
# FAANG-level strict configuration inspired by SellGlow
#
# Philosophy: Architecture-Driven Development (ADD)
# - All rules are ERROR level
# - Zero tolerance for code quality violations
# =====================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["services", "models", "config", "jobs"]

[project]
name = "isciacus-monitoring-backend"
version = "1.0.0"
description = "ISCIACUS Product Monitoring API - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "inngest>=0.4.0",
    "cryptography>=41.0.0",
    "google-analytics-data>=0.18.0",
    "google-auth>=2.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

# =====================================================
# RUFF - Fast Python Linter (replaces Flake8, isort, etc.)
# =====================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude paths
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
# Enable ALL rule categories (FAANG-level strict)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "ASYNC",  # flake8-async
    "PERF",   # Perflint
    "FURB",   # refurb
]

# Rules to ignore (with justification - MAX 5 allowed by guard)
ignore = [
    "COM812",  # Trailing comma - conflicts with Black
    "ISC001",  # Single line implicit string concatenation - conflicts with Black
    "S101",    # assert usage - needed for tests
    "TC003",   # AsyncGenerator used at runtime, not just type checking
    "PLR0913", # API endpoints with filters need many params
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and magic values
"**/tests/**/*.py" = ["S101", "PLR2004", "ARG001", "T201", "PLR0915", "I001", "Q000"]
"**/test_*.py" = ["S101", "PLR2004", "ARG001", "T201", "PLR0915", "I001", "Q000", "E501"]
# Jobs use lazy imports to avoid circular dependencies
"**/jobs/**/*.py" = ["PLC0415", "PLR2004", "S110", "F841", "PLR0912"]
# FastAPI endpoints have request param for typing/middleware even if unused
# And use magic numbers for HTTP status codes
"monitoring_app.py" = ["ARG001", "PLR2004", "FBT001", "FBT002", "PLC0415", "B904", "ASYNC210", "PLR0912", "SLF001"]
# CLI scripts can use print statements
"**/scripts/**/*.py" = ["T201", "EXE001"]
# Services use magic numbers for thresholds, lazy imports, and have long template strings
"**/services/**/*.py" = ["PLR2004", "PLC0415", "SLF001", "PLR0911", "PLR0912", "PLR0915", "PLW0603", "E501", "F841", "FBT001", "FBT002", "RUF012", "SIM102", "SIM118", "S110", "PTH101", "PTH123", "PLW2901", "RUF059"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 12

# =====================================================
# BLACK - Code Formatter
# =====================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.mypy_cache
  | dist
  | build
)/
'''

# =====================================================
# MYPY - Static Type Checker (STRICT mode)
# =====================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Strict flags (all enabled)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "requests",
]
ignore_missing_imports = true

# Allow less strict typing in services that heavily use external APIs
# These modules return dynamic JSON data where strict typing is impractical
[[tool.mypy.overrides]]
module = [
    "monitoring_app",
    "services.*",
    "jobs.*",
    "scripts.*",
    "routes.*",
    "tests.*",
]
ignore_errors = true

# =====================================================
# PYTEST - Testing Configuration
# =====================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
